# sovereign-voice-ai-agents

./: .gitignore  Makefile  README.md  credentials.yml  demo_live.py  domain.yml  generate_user_audio.py  pyproject.toml  verify_setup.py
.rasa/cache/rasa-llm-cache/: cache.db-shm  cache.db-wal
.rasa/cache/tmp7waos3p6/: index.faiss
.rasa/cache/tmpnhl82bla/: config.json  index.faiss
data/: flows.yml
scripts/: check_asr.py
services/: neutts_service.py
